--- a/views/loginfn.ejs
+++ b/views/loginfn.ejs
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/loginfn.css" />
+    <title>loginfn</title>
   </head>
   <body>
-    <h5><%= title %></h5>
+    <div class="container">
+      <div class="welcome-text">
+        <span><%= username.name %></span>님 환영합니다!
+      </div>
+    </div>
     <!-- 스크립트 파일 -->
     <script src="/js/loginfn.js"></script>
   </body>
