--- a/views/join.ejs
+++ b/views/join.ejs
@@ -126,7 +126,14 @@
         </div>
         <div class="birthText"></div>
         <br />
-        <button type="submit" id="sign" disabled="true">회원등록</button>
+        <button
+          type="submit"
+          id="sign"
+          disabled="true"
+          onclick="signbtnClick()"
+        >
+          회원등록
+        </button>
         <!--  -->
       </form>
     </div>
