--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,10 +11,10 @@
       <form class="loginForm">
         <!-- <form action="/loginfn" method="POST" class="loginForm"> -->
         <div class="formWrap">
-          <label for="id">아이디</label><br />
+          <label for="email">아이디</label>
           <input
-            type="id"
-            id="id"
+            type="email"
+            id="email"
             name="id"
             placeholder="이메일을 입력해주세요."
             required
